#add_subdirectory(CppLinuxSerial)

# Load Cell ADC Library for ADC ADS1262 (maybe ADS1261, forgot. think 2)
#add_library(loadcell6dofinterface
#STATIC
#loadCell6DOFInterface.h
#driverInterface.h
#loadCell6DOFInterface.cpp)

#target_link_libraries(loadcell6dofinterface PUBLIC loadcell6dof)

